--- a/index.html
+++ b/index.html
@@ -1,11 +1,109 @@
 <!DOCTYPE html>
 <html lang="nl-BE">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>home</title>
+    <!-- reset jouw css -->
+    <link href="./css/reset.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap CSS icons: https://icons.getbootstrap.com/#usage -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- JavaScript: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+    <!-- eigen geschreven css voor jouw html-bestand -->
+    <link href="./css/style.css" rel="stylesheet">
+  </head>
+
 <body>
-    
+
+<header>
+  <nav class="navbar navbar-expand-md fixed-top" style="background-color: #666565;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"><img src="./assets/logo.png" alt="Logo" width="100" height="90">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active oranje" href="index.html">home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link oranje" href="diensten.html">dashboard</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle oranje" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              diensten
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item oranje" href="camera.html">camera</a></li>
+              <li><a class="dropdown-item oranje" href="thermostaat.html">thermostaat</a></li>
+              <li><a class="dropdown-item oranje" href="iemandthuis.html">iemand thuis?</a></li>
+              <li><a class="dropdown-item oranje" href="muziek.html">muziek</a></li>
+              <li><a class="dropdown-item oranje" href="verbruik.html">verbruik</a></li>
+              <li><a class="dropdown-item oranje" href="weer.html">weer</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link oranje" aria-current="page" href="contact.html">contact</a>
+          </li>
+        </ul>
+      
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="zoeken" aria-label="Search">
+          </form>
+    </div>
+  </div>
+</nav>
+</header>
+<main>
+  <div class="container my-5">
+      <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+              <h1 class="mb-3">Welkom bij Jorn's Smart Home! <i class="bi bi-house-heart-fill"></i></h1>
+              <p>Welkom bij Jorn's Smart Home, jouw ultieme partner voor een intelligenter, veiliger en comfortabeler thuis! Duik in de wereld van geavanceerde smart home-technologie en ontdek hoe onze oplossingen je dagelijks leven niet alleen makkelijker maar ook energiezuiniger en veiliger maken.</p>
+              <p>Hallo, ik ben Jorn Steynen, eerstejaarsstudent IoT op de AP Hogeschool te Antwerpen. Voor het vak 'Webtechnologie: intro' kregen we de opdracht een website te bouwen met als onderwerp IoT. Op deze site vindt u 6 'Smart Home' diensten terug die u zou kunnen gebruiken in de IoT-wereld.</p>
+          </div>
+          <div class="col-md-4">
+              <img src="./assets/jorn.jpeg" alt="Jorn Steynen" class="rounded-circle">
+          </div>
+      </div>
+
+      <h2 class="text-center my-5"><span style="text-decoration: underline;">Onze diensten:</span></h2>
+      <div class="row g-4">
+          <div class="col-md-4">
+              <h3><a href="camera.html">1 - Slimme Beveiligingscamera's</a></h3>
+              <p>Houd je huis veilig met onze geavanceerde camerabeveiligingssystemen.</p>
+          </div>
+          <div class="col-md-4">
+              <h3><a href="thermostaat.html">2 - Thermostaatregeling</a></h3>
+              <p>Pas de temperatuur in je huis aan vanaf elke locatie voor comfort en efficiëntie.</p>
+          </div>
+          <div class="col-md-4">
+              <h3><a href="iemandthuis.html">3 - Aanwezigheidsdetectie</a></h3>
+              <p>Iemand thuis? Weet altijd wie er thuis is en in welke ruimte met onze slimme aanwezigheidssensoren.</p>
+          </div>
+          <div class="col-md-4">
+              <h3><a href="muziek.html">4 - Slimme Muziekbediening</a></h3>
+              <p>Beheers de sfeer in elke kamer met je stem of mobiele apparaat.</p>
+          </div>
+          <div class="col-md-4">
+              <h3><a href="verbruik.html">5 - Energieverbruik</a></h3>
+              <p>Houd je energieverbruik real-time in de gaten en ontvang tips om je energie-efficiëntie te verbeteren.</p>
+          </div>
+          <div class="col-md-4">
+              <h3><a href="weer.html">6 - Weersvoorspellingen</a></h3>
+              <p>Blijf op de hoogte van de laatste weersomstandigheden met accurate, up-to-date weersvoorspellingen.</p>
+          </div>
+      </div>
+  </div>
+</main>
+
+<hr>
+<footer class="container-fluid text-center h6 small p-4">&copy; 2024 - Jorn Steynen - Grad. IoT groep1</footer>
 </body>
 </html>
