--- a/index.html
+++ b/index.html
@@ -75,27 +75,27 @@
 
       <h2 class="text-center my-5"><span style="text-decoration: underline;">Onze diensten:</span></h2>
       <div class="row g-4">
-          <div class="col-md-4">
-              <h3><a href="camera.html">1 - Slimme Beveiligingscamera's</a></h3>
-              <p>Houd je huis veilig met onze geavanceerde camerabeveiligingssystemen.</p>
-          </div>
-          <div class="col-md-4">
+        <div class="col-lg-4 col-md-6">
+            <h3><a href="camera.html">1 - Slimme Beveiligingscamera's</a></h3>
+            <p>Houd je huis veilig met onze geavanceerde camerabeveiligingssystemen.</p>
+        </div>
+          <div class="col-lg-4 col-md-6">
               <h3><a href="thermostaat.html">2 - Thermostaatregeling</a></h3>
               <p>Pas de temperatuur in je huis aan vanaf elke locatie voor comfort en efficiëntie.</p>
           </div>
-          <div class="col-md-4">
-              <h3><a href="iemandthuis.html">3 - Aanwezigheidsdetectie</a></h3>
+          <div class="col-lg-4 col-md-6">
+              <h3><a href="iemandthuis.html">3 - Detectie Aanwezigheid</a></h3>
               <p>Iemand thuis? Weet altijd wie er thuis is en in welke ruimte met onze slimme aanwezigheidssensoren.</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-lg-4 col-md-6">
               <h3><a href="muziek.html">4 - Slimme Muziekbediening</a></h3>
               <p>Beheers de sfeer in elke kamer met je stem of mobiele apparaat.</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-lg-4 col-md-6">
               <h3><a href="verbruik.html">5 - Energieverbruik</a></h3>
               <p>Houd je energieverbruik real-time in de gaten en ontvang tips om je energie-efficiëntie te verbeteren.</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-lg-4 col-md-6">
               <h3><a href="weer.html">6 - Weersvoorspellingen</a></h3>
               <p>Blijf op de hoogte van de laatste weersomstandigheden met accurate, up-to-date weersvoorspellingen.</p>
           </div>
