--- a/thermostaat.html
+++ b/thermostaat.html
@@ -14,6 +14,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <!-- eigen geschreven css voor jouw html-bestand -->
     <link href="./css/style.css" rel="stylesheet">
+     <!-- script thermostaat -->
+    <script src="./js/script-thermostaat.js" defer></script>
+
   </head>
 
 <body>
@@ -71,10 +74,11 @@
               </h1>
               <p class="mb-4">Ervaar ongekend comfort en efficiëntie met onze geavanceerde slimme thermostaten. Deze innovatieve apparaten zijn ontworpen om je woning niet alleen comfortabeler maar ook energiezuiniger te maken. Met intuïtieve bediening en automatisering past de slimme thermostaat zich aan jouw levensstijl aan, waardoor je zowel energie als geld bespaart.</p>
               <h2 class="mb-4">Intelligente klimaatbeheersing in je handpalm</h2>
-              <p class="mb-4">Onze slimme thermostaten leren van je voorkeuren en passen zich automatisch aan de seizoenen en je schema aan. Ze zijn op afstand bedienbaar via je smartphone, tablet of computer, waardoor je altijd en overal de controle houdt over het klimaat in je huis.</p>
+              <p class="mb-5">Onze slimme thermostaten leren van je voorkeuren en passen zich automatisch aan de seizoenen en je schema aan. Ze zijn op afstand bedienbaar via je smartphone, tablet of computer, waardoor je altijd en overal de controle houdt over het klimaat in je huis.</p>
           </div>
           <div class="col-md-6">
-              <p class="text-center">De huidige temperatuur in uw woning bedraagt: <br>INLADEN API !</p>
+              <p class="text-center">De huidige temperatuur in uw woning bedraagt:</p>
+              <div class="text-center" id="temperatuur"></div>
           </div>
       </div>
   </div>
