--- a/weer.html
+++ b/weer.html
@@ -27,6 +27,7 @@
     crossorigin=""defer></script>
     <!-- voeg het mapScript.js script toe aan de pagina en laad het als de pagina geladen is. -->
     <script src="./js/mapScriptWeer.js" defer></script>
+     <!-- script weer -->
     <script src="./js/script-weer.js" defer></script>
     
     
