--- a/iemandthuis.html
+++ b/iemandthuis.html
@@ -28,6 +28,8 @@
     crossorigin=""defer></script>
     <!-- voeg het mapScript.js script toe aan de pagina en laad het als de pagina geladen is. -->
     <script src="./js/mapScriptIemandThuis.js" defer></script>
+    <!-- script random user -->
+    <script src="./js/script-iemandThuis.js" defer></script>
   </head>
 
 <body>
@@ -97,7 +99,7 @@
               <p style="font-size: xx-large;">Uw Thuis:</p>
           </div>
           <div class="col-md-7 text-center">
-              <div class="row">
+              <div class="row justify-content-center">
                   <section id="map" class="row">
                       <div id="iemandThuisMap" style="height: 400px;"></div>
                   </section>
@@ -106,11 +108,28 @@
       </div>
   </div>
   <hr>
-  <figure>
-      <img src="./assets/iemandthuis1.jpg" alt="plattegrond huis" class="figure-img img-fluid rounded" style="width: 600px;">
-      <figcaption>&copy; roomsketcher.com</figcaption>
-  </figure>
+  <div class="container-fluid">
+    <div class="row align-items-center">
+        <div class="col-md-5 text-center">
+          <figure>
+            <img src="./assets/iemandthuis1.jpg" alt="plattegrond huis" class="figure-img img-fluid rounded" style="width: 600px;">
+            <figcaption>&copy; roomsketcher.com</figcaption>
+        </figure>
+        </div>
+        <div class="col-md-7 text-center">
+            <div class="row">
+              <section id="clients" class="container-fluid">
+                <!-- JavaScript laadt de klanten in met een API -->
+              </section>
+            </div>
+        </div>
+    </div>
+</div>
+ 
 </main>
+
+
+
 
 <hr>
 <footer class="container-fluid text-center h6 small p-4">&copy; 2024 - Jorn Steynen - Grad. IoT groep1</footer>
