script random user aangepast

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   <div class="container my-5">
       <div class="row justify-content-center">
           <div class="col-md-8 text-center">
-              <h1 class="mb-3">Welkom bij Jorn's Smart Home! <i class="bi bi-house-heart-fill"></i></h1>
-              <p>Welkom bij Jorn's Smart Home, jouw ultieme partner voor een intelligenter, veiliger en comfortabeler thuis! Duik in de wereld van geavanceerde smart home-technologie en ontdek hoe onze oplossingen je dagelijks leven niet alleen makkelijker maar ook energiezuiniger en veiliger maken.</p>
+              <h1 class="mb-5">Welkom bij Jorn's Smart Home! <i class="bi bi-house-heart-fill"></i></h1>
+              <p class="mb-5">Welkom bij Jorn's Smart Home, jouw ultieme partner voor een intelligenter, veiliger en comfortabeler thuis! Duik in de wereld van geavanceerde smart home-technologie en ontdek hoe onze oplossingen je dagelijks leven niet alleen makkelijker maar ook energiezuiniger en veiliger maken.</p>
               <p>Hallo, ik ben Jorn Steynen, eerstejaarsstudent IoT op de AP Hogeschool te Antwerpen. Voor het vak 'Webtechnologie: intro' kregen we de opdracht een website te bouwen met als onderwerp IoT. Op deze website vindt u 6 'Smart Home' diensten terug die u zou kunnen gebruiken in de IoT-wereld.</p>
           </div>
           <div class="col-md-4">
