--- a/thermostaat.html
+++ b/thermostaat.html
@@ -68,7 +68,7 @@
 <main>
   <div class="container-fluid">
       <div class="row align-items-center">
-          <div class="col-md-6 border-right">
+          <div class="col-md-6  custom-border">
               <h1 class="mb-4 text-center">
                   <i class="bi bi-thermometer-half"></i> Slimme thermostaten: <br> Comfort en controle
               </h1>
@@ -76,7 +76,7 @@
               <h2 class="mb-4">Intelligente klimaatbeheersing in je handpalm</h2>
               <p class="mb-5">Onze slimme thermostaten leren van je voorkeuren en passen zich automatisch aan de seizoenen en je schema aan. Ze zijn op afstand bedienbaar via je smartphone, tablet of computer, waardoor je altijd en overal de controle houdt over het klimaat in je huis.</p>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 mt-5">
               <p class="text-center">De huidige temperatuur in uw woning bedraagt:</p>
               <div class="text-center" id="temperatuur"></div>
           </div>
