--- a/verbruik.html
+++ b/verbruik.html
@@ -63,7 +63,7 @@
 <main>
   <div class="container">
       <div class="row justify-content-center">
-          <div class="col-md-6">
+          <div class="col-md-6 justify">
               <h1 class="mb-5 text-center">
                   <i class="bi bi-lightning-charge fs-1"></i> Slim Energiebeheer <i class="bi bi-lightbulb fs-1"></i> <br>
                   Meet en beheer je energieverbruik
