--- a/muziek.html
+++ b/muziek.html
@@ -14,6 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <!-- eigen geschreven css voor jouw html-bestand -->
     <link href="./css/style.css" rel="stylesheet">
+    <!-- script muziek -->
+    <script src="./js/script-muziek.js" defer></script>
   </head>
 
 <body>
@@ -79,7 +81,7 @@
               <p>Met onze geavanceerde smart home-technologie kun je gemakkelijk afspeellijsten selecteren, nummers overslaan, en het volume aanpassen vanuit elke hoek van je huis. Of je nu een ontspannende avond plant of een groot feest, de juiste muziek staat altijd tot je beschikking.</p>
               <hr>
               
-              <p>Je muziek dat zich momenteel afspeelt: INLADEN API</p>
+              <div class="text-center" id="randomSong"></div>
           </div>
       </div>
   </div>
